--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ java {
     sourceCompatibility = '11'
 }
 
+//lombok
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -24,13 +25,18 @@ repositories {
 }
 
 dependencies {
+    //스프링부트 버전에 맞는 버전을 미리 정해서 내가 따로 지정안해도댐
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'junit:junit:4.13.1'//개발할때 도움되는 도구가 많음
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6")
 }
 
 tasks.named('test') {
