--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,30 @@
 
+spring:
+  datasource:
+    #MVCC=TRUE를 넣으면 좀 더 빠름, 권장
+    #H2 1.4.200 버전부터 MVCC 옵션이 제거
+    url: jdbc:h2:tcp://localhost/c:/lmg/study/jpashop;
+    username: sa
+    password:
+    #h2 쓰니까
+    driverClassName: org.h2.Driver
+
+  jpa:
+    hibernate:
+      #실행 시점에 지우고 다시 자동 생성
+      #drop if exist -> create
+      ddlAuto: create
+    properties:
+      #hibernate 설정, 이런 옵션은 스프링부트 메뉴얼보고 공부
+      hibernate:
+        #jpa가 생성 실행하는 모든 sql이 남음(시스템, 실제 환경에선 쓰면 안댐)
+#        show_sql: true
+        format_sql: true
+
+logging:
+  level:
+    #jpa가 생성 실행하는 모든 sql이 남음(로그, 실제 환경에선 이걸 권장)
+    org.hibernate.SQL: debug
+    #쿼리 파라미터 로그 남김
+    org.hibernate.type: trace
+
