--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.springframework.boot:spring-boot-devtools' //변경된 부분을 컴파일만 해주면 재시작안해도됨
     testImplementation 'junit:junit:4.13.1'//개발할때 도움되는 도구가 많음
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6")
 }
